--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,11 @@
             "module": "uvicorn",
             "args": [
                 "Server:app",
-                "--reload"
+                "--reload",
+        "--host",
+        "0.0.0.0",
+        "--port",
+        "8000"
             ],
             "jinja": true
         }
